--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    width: 100%;
 }
 
 .hero-mainheading {
